<resources>
    <string name="app_name">Get2Gether</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome, %1$s</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="server_client_id">514724789354-bitl63lpqu0hf3tgmcu7lvc27uq9cbs9.apps.googleusercontent.com</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="app_icon">App Icon</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_fragment_label">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_meetings">View Meetings</string>
    <string name="meeting_succ">Meeting "%s" has been created successfully and your participants have been notified.</string>
    <string name="meetingConfirmBody">Meeting "%s" has been set up at %s on %s/%s/%s.</string>
    <string name="meeting_confirmed">Meeting Confirmed!</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="meetingEntryDT">%s/%s/%s %s</string>
    <string name="invalid_query_uri">Invalid Query</string>
    <string name="insert_failed">insert failed</string>
    <string name="invalid_insert_uri">invalid isner turi</string>
    <string name="invalid_delete_uri">invalid delete uri</string>
    <string name="invalid_update_uri">invalid update uri</string>
</resources>
