<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_meetingconfirmed">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="366dp"
            android:layout_height="73dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="184dp"
            android:text="@string/meeting_confirmed"
            android:textSize="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meetingConfirmBodyText"
            android:layout_width="346dp"
            android:layout_height="178dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/meetingConfirmBody"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/goToMainPage"
            android:layout_width="379dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="56dp"
            android:padding="@dimen/fab_margin"

            android:text="@string/next"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>