<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.get2gether.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action android:id="@+id/action_FirstFragment_self" />
        <action
            android:id="@+id/goToMakeMeeting"
            app:destination="@id/fragment_makemeeting" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.get2gether.fragment_second"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_fragment_meetingsuccess"
            app:destination="@id/fragment_meetingsuccess" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.get2gether.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="true"
            app:destination="@id/FirstFragment" />
    </fragment>
    <action
        android:id="@+id/prompt_Login"
        app:destination="@id/LoginFragment" />
    <action
        android:id="@+id/action_goHome"
        app:destination="@id/FirstFragment" />
    <action
        android:id="@+id/goToSecondFrag"
        app:destination="@id/SecondFragment" />
    <fragment
        android:id="@+id/mySettingsFragment"
        android:name="com.get2gether.MySettingsFragment"
        android:label="MySettingsFragment" />
    <action android:id="@+id/action_global_mySettingsFragment"
        app:destination="@id/mySettingsFragment"

        />
    <fragment
        android:id="@+id/ViewMeetingFragment"
        android:name="com.get2gether.ViewMeetingFragment"
        android:label="fragment_view_meeting"
        tools:layout="@layout/fragment_view_meeting" />
    <action android:id="@+id/action_global_viewMeetingFragment" app:destination="@id/ViewMeetingFragment" />
    <fragment
        android:id="@+id/fragment_makemeeting"
        android:name="com.get2gether.fragment_makemeeting"
        android:label="fragment_makemeeting"
        tools:layout="@layout/fragment_makemeeting" >
        <action
            android:id="@+id/makeMeetingToTimes"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_meetingsuccess"
        android:name="com.get2gether.fragment_meetingsuccess"
        android:label="fragment_meetingsuccess"
        tools:layout="@layout/fragment_meetingsuccess" >
        <action
            android:id="@+id/action_fragment_meetingsuccess_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_meetingconfirmed"
        android:name="com.get2gether.fragment_meetingconfirmed"
        android:label="fragment_meetingconfirmed"
        tools:layout="@layout/fragment_meetingconfirmed" >
        <action
            android:id="@+id/action_fragment_meetingconfirmed_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
